src/tests/snapshots/gitu__tests__remote__remote_menu.snap
---
source: src/tests/remote.rs
expression: ctx.redact_buffer()
---
▌main                                                                           |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
 Remote                                                                         |
 a     add remote                                                               |
 K     remove remote                                                            |
 r     rename remote                                                            |
 q/esc Quit/Close                                                               |
styles_hash: 455d03ebce7a21c9
