src/tests/snapshots/gitu__tests__remote__rename_remote.snap
---
source: src/tests/remote.rs
expression: ctx.redact_buffer()
---
▌main                                                                           |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin2/main add initial-file                                     |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git remote rename origin origin2                                              |
styles_hash: a1bfeec62ff1f3e7
